app/assets/stylesheets/plate-map/plate-layout.css
@import url(http://fonts.googleapis.com/css?family=Roboto);

.
.plate-setup-container {
  width: 1024px;
  height: 768px;
  float: left;
}

.plate-setup-wrapper {
  width: 1024px;
  height: 768px;
  position: absolute;
  background-color: #f5f5f5;
}

.plate-setup-top-section {
  width: 1024px;
  height: 560px;
  position: relative;
}

.plate-setup-top-left {
  width: 674px;
  height: 560px;
  position: absolute;
}

.plate-setup-top-right {
  width: 350px;
  height: 548px;
  position: absolute;
  left: 674px;
}

.plate-setup-menu-container {
  width: 650px;
  height: 32px;
}

.plate-setup-menu-item {
  width: 60px;
  height: 32px;
  float: right;
  font-family: 'Roboto', sans-serif;
  font-size: 12px;
  padding-top: 8px;
  cursor: pointer;
}

.plate-setup-overlay-container {
  width: 632px;
  height: 32px;
  background-color: #464646;
  margin-left: 16px;
  -webkit-border-radius: 2px;
  -moz-border-radius: 2px;
  border-radius: 2px;
  position: relative;
}

.plate-setup-overlay-radio-container {
  width: 32px;
  height: 32px;
}

.plate-setup-overlay-text-container {
  width: 280px;
  height: 32px;
  left: 11px;
  top: 6px;
  color: white;
  font-size: 12px;
  font-family: 'Roboto', sans-serif;
  position: absolute;
}

.plate-setup-overlay-button-container {
  width: 340;
  height: 32px;
  float: left;
  left: 300px;
  top: 4px;
  position: absolute;
}

.plate-setup-button {
  width: 103px;
  height: 23px;
  font-family: 'Roboto', sans-serif;
  font-size: 10px;
  border: none;
  background-color: white;
  -webkit-border-radius: 2px;
  -moz-border-radius: 2px;
  border-radius: 2px;
  margin-left: 4px;
}

.plate-setup-canvas-container {
  height: 482px;
  width: 632px;
  margin-left: 16px;
}

#DNAcanvas {
  height: 482px;
  width: 632px;
}

.plate-setup-tab-container {
  position: absolute;
  top:10px;
  left:10px;
  width: 330px;
  height: 528px;
  background-color: white;
  border: solid 1px #e1e1e1;
}

.plate-setup-tab-head {
  width: 330px;
  height: 23px;
  border-bottom: solid 1px #e1e1e1;
  background-color: #f5f5f5;
  display: flex;
}

.plate-setup-tab {
  height: 23px;
  background-color: #ebebeb;
  border-right: solid 1px #e1e1e1;
  cursor: pointer;
  font-family: 'Roboto', sans-serif;
  font-size: 10px;
  text-align: center;
  padding: 5px;
  box-sizing: border-box;
  flex: 1 1 auto;
  white-space: nowrap;
  overflow: hidden;
}

.plate-setup-tab:last-child {
  border-right: none;
}

.plate-setup-tab-selected {
  height: 24px;
  background-color: white;
  color: #00506e;
  flex-shrink: 0;
}

.plate-setup-tab-data-container {
  width: 330px;
  height: 442px;
  border-bottom: solid 1px #e1e1e1;
  position: absolute;
  font-family: 'Roboto', sans-serif;
}

.plate-setup-data-div {
  width: 330px;
  height: 442px;
  position: absolute;
  background-color: white;
}

.plate-setup-well-attr-container {
  width: 330px;
  height: 20px;
  box-sizing: border-box;
  padding: 0px 16px;
  color: #00506e;
  text-align: center;
  position: absolute;
  top: 472px;
  font-size: 10px;
  font-family: 'Roboto', sans-serif;
}

.plate-setup-preset-container {
  width: 330px;
  height: 22px;
  position: absolute;
  top: 494px;
  box-sizing: border-box;
  padding: 0px 16px;
  text-align: center;
  display: flex;
  justify-content: center;
}

.plate-setup-prest-tab {
  display: inline-block;
  flex-basis: 50px;
  padding: 0 5px;
  margin: 0 1px;
  height: 20px;
  background-color: white;
  border: solid 1px #e1e1e1;
  border-radius: 2px;
  cursor: pointer;
  font-family: 'Roboto', sans-serif;
  font-size: 10px;
  text-align: center;
}

.plate-setup-prest-tab-selected {
  display: inline-block;
  flex-basis: 50px;
  padding: 0 5px;
  margin: 0 1px;
  height: 20px;
  background-color: #e1e1e1;
  border: solid 1px #e1e1e1;
  border-radius: 2px;
  cursor: pointer;
  font-family: 'Roboto', sans-serif;
  font-size: 11px;
  text-align: center;
  color: #00506e;
}

.plate-setup-prest-tab-div {
  padding-top: 3px;
}

.plate-setup-tab-default-field {
  display: flex;
  padding: 16px 16px 0 16px;
}

.plate-setup-tab-field-left-side {
  width: 32px;
}

.plate-setup-tab-field-right-side {
  flex: 1;
}

.plate-setup-tab-name {
  height: 20px;
  font-family: 'Roboto', sans-serif;
  font-size: 12px;
}

.plate-setup-tab-field-container {
  width: 100%;
  display: flex;
}

.plate-setup-tab-input {
  height: 28px;
  flex: 2;
}

.plate-setup-tab-select-field {
  height: 31px;
  flex: 2;
}

.plate-setup-tab-multiselect-field {
  height: 31px;
  flex: 2;
}

.plate-setup-tab-label-select-field {
  max-width: 90px;
  padding-left: 5px;
}

.plate-setup-tab-unit {
  font-family: 'Roboto', sans-serif;
  line-height: 26px;
  height: 28px;
  padding-left: 5px;
  color: #444;
  white-space: nowrap;
}

.plate-setup-tab-check-box {
  margin-top: 26px;
}

.plate-setup-bottom-container {
  background-color: #e1e1e1;
  width: 1024px;
  height: 208px;
  overflow: auto;
}

.plate-setup-bottom-table {
  font-family: 'Roboto', sans-serif;
  font-size: 14px;
  border-collapse: collapse;
  width: 100%;
}

.plate-setup-bottom-table th {
  border: solid #c2c2c2 1px;
  padding: 5px 10px;
  font-weight: bold;
  font-size: 12px;
  text-align: left;
}

.plate-setup-bottom-table td {
  border: solid #c2c2c2 1px;
  padding: 5px 10px;
  background-color: white;
}

.plate-setup-bottom-id {
  width: 60px;
}

.plate-setup-container-outer {
  width: 1024px;
  height: 768px;
  float: left;
}

input.invalid {
  background-color: pink;
}

